--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jplamb.github.io",
   "version": "1.0.0",
   "description": "",
-  "main": "../index.js",
+  "main": "./index.js",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
@@ -23,6 +23,7 @@
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
+    "bootstrap": "^5.2.3",
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
@@ -49,6 +50,7 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
